get by id exercise endpoint
