# src/internal/handler/exercise_handler.go
@@ -5,6 +5,7 @@ import (
 	"workoutpal/src/internal/domain/handler"
 	"workoutpal/src/internal/domain/service"
 	"workoutpal/src/internal/model"
+	"workoutpal/src/util/constants"
 
 	"github.com/go-chi/render"
 )
@@ -41,6 +42,28 @@ func (h *exerciseHandler) ReadExercises(w http.ResponseWriter, r *http.Request) 
 		return
 	}
 	render.JSON(w, r, exercises)
+}
+
+// ReadExerciseByID godoc
+// @Summary Returns the exercise with the corresponding ID
+// @Tags Exercises
+// @Accept json
+// @Produce json
+// @Success 200 {object} model.Exercise "Exercises retrieved successfully"
+// @Failure 400 {object} model.BasicResponse "Validation error"
+// @Failure 401 {object} model.BasicResponse "Unauthorized"
+// @Failure 500 {object} model.BasicResponse "Internal server error"
+// @Security BearerAuth
+// @Router /exercises/:id [get]
+func (h *exerciseHandler) ReadExerciseByID(w http.ResponseWriter, r *http.Request) {
+	id := r.Context().Value(constants.ID_KEY).(int64)
+	exercise, err := h.exerciseService.ReadExerciseByID(id)
+	if err != nil {
+		render.Status(r, http.StatusInternalServerError)
+		render.JSON(w, r, model.BasicResponse{Message: err.Error()})
+		return
+	}
+	render.JSON(w, r, exercise)
 }
 
 // CreateExercise godoc
